# webScraperOspVivo

./: .gitignore  README.md  comando_para_exe.txt  pyproject.toml  webScraperOsp.py
app/: webScraperOsp.py
tests/: test_webScraperOsp.py
