[project]
name = "webscraper_osp"
version = "0.1.0"
description = "automação para obter dados do site OSP VIVO."
authors = [
    {name = "geovanecarvalho",email = "geovane.carvalho@telemont.com.br"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "pyinstaller (>=6.18.0,<7.0.0)",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "fastapi[all] (>=0.128.8,<0.129.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
